--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@ current: index
               src="./assets/images/pet_health.jpeg"
               class="img-fluid rounded"
             />
-            <p class="mt-2 fs-8 fw-bold pt-2 pb-2">寵物副食&零食</p></a
+            <p class="mt-2 fs-8 fw-bold pt-2 pb-2">寵物副食</p></a
           >
         </li>
       </ul>
@@ -113,9 +113,9 @@ current: index
 <div class="section-recommend">
   <div class="container">
     <h2 class="fs-9 fw-bold mb-9 text-center">顧客推薦</h2>
-    <ul class="row justify-content-sm-center align-items-sm-center">
+    <ul class="row justify-content-center align-items-center">
       <li
-        class="col-6 col-lg-3 mb-7 mb-lg-0"
+        class="col-8 col-lg-3 mb-7 mb-lg-0"
         data-aos="flip-left"
         data-aos-duration="1000"
       >
@@ -129,7 +129,7 @@ current: index
         </div>
       </li>
       <li
-        class="col-6 col-lg-3 mb-7 mb-lg-0"
+        class="col-8 col-lg-3 mb-7 mb-lg-0"
         data-aos="flip-left"
         data-aos-duration="1000"
         data-aos-delay="100"
@@ -144,7 +144,7 @@ current: index
         </div>
       </li>
       <li
-        class="col-6 col-lg-3"
+        class="col-8 col-lg-3 mb-7 mb-lg-0"
         data-aos="flip-left"
         data-aos-duration="1000"
         data-aos-delay="300"
@@ -159,7 +159,7 @@ current: index
         </div>
       </li>
       <li
-        class="col-6 col-lg-3"
+        class="col-8 col-lg-3"
         data-aos="flip-left"
         data-aos-duration="1000"
         data-aos-delay="500"
