--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 ---
-title: 寵物天地 PetWorld | 首頁
+title: 寵物天地 PetWorld
 layout: ./app/layout.ejs
 engine: ejs
 current: index
@@ -22,7 +22,7 @@ current: index
 <div class="section-service bg-ivory">
   <div class="container text-center">
     <h2 class="fs-9 fw-bold mb-8">為您的寵物，提供最好的</h2>
-    <ul class="row d-flex justify-content-center service-items">
+    <ul class="row d-flex justify-content-center service-items ps-2 pe-2">
       <li class="col-lg-3" data-aos="flip-up">
         <img src="./assets/images/home-section2-1.png" alt="" />
         <h3 class="fs-6 fw-bolder mt-6 mb-2">貼心價格</h3>
